app/dashboard/base/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: dashboard
    app.kubernetes.io/name: dashboard
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-version: "1.14"
  name: dashboard
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: dashboard
    deploymentconfig: dashboard
  sessionAffinity: None
  type: ClusterIP
