app/dashboard/base/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: dashboard
    app.kubernetes.io/name: dashboard
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-version: "1.14"
  name: dashboard
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dashboard
    weight: 100
  wildcardPolicy: None
